--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ioredis": "^5.0.4",
     "js-priority-queue": "^0.1.5",
     "mongodb": "^4.5.0",
-    "redis": "^4.0.6"
+    "redis": "^4.0.6",
+    "socket.io": "^4.4.1",
+    "uuidv4": "^6.2.13"
   }
 }
