--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.0",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.1",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
