add mysql dumpDB and change app.js name

--- a/broker/.env.example
+++ b/broker/.env.example
@@ -1,3 +1,4 @@
+apiHost = 'apiHost'
 port = 'port'
 redisPort = 'redisPort'
 redisHost = 'redisHost'
@@ -14,4 +15,4 @@ rabbitmqPort = 'rabbitmqPort'
 mysqlHost = 'mysqlHost'
 mysqlDB = 'mysqlDB'
 mysqlUser = 'mysqlUser'
-mysqlPW = '!@#mysqlPW'
+mysqlPW = 'mysqlPW'
