--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.1",
+    "sweetalert2": "^11.4.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
