--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "amqplib": "^0.8.0",
     "axios": "^0.27.2",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "ioredis": "^5.0.4",
