--- a/exchange/.env.example
+++ b/exchange/.env.example
@@ -11,3 +11,7 @@ rabbitmqUser = 'rabbitmqUser'
 rabbitmqPW = 'rabbitmqPW'
 rabbitmqHost = 'rabbitmqHost'
 rabbitmqPort = 'rabbitmqPort'
+mysqlHost = 'mysqlHost'
+mysqlDB = 'mysqlDB'
+mysqlUser = 'mysqlUser'
+mysqlPW = '!@#mysqlPW'
